# dragon-analyzer

./: .python-version  Dockerfile  Makefile  README.md  gunicorn.conf.py  pyproject.toml
kubernetes/: api.yaml
src/data/: Speedcoach_Arjo_20231008_1118.csv
src/dragon-analyzer/: data.py  main.py  plot.py  route_animation.py  utils.py
src/dragon-analyzer/speedcoach/: interval_summary.py  per_stroke_data.py  reader.py  session_summary.py
src/dragon_analyzer/: main.py  route_animation.py
src/dragon_analyzer/database/: db.py
src/dragon_analyzer/database/orm/: speed_coach.py
src/dragon_analyzer/service/persistence/: db.py  speed_coach.py
src/dragon_analyzer/speedcoach/: interval_summary.py  per_stroke_data.py  reader.py  session_summary.py
