[tool.poetry]
name = "dragon_analyzer"
version = "0.1.0"
description = "Speed statistics of dragon boat sessions"
authors = ["Ashley Beringer", "Erik Streithorst"]
license = "MIT"
readme = "README.md"
packages = [{ include = "dragon_analyzer", from = "src"}]

[tool.poetry.dependencies]
python = "~3.11"
pandas = "^2.1.1"
matplotlib = "^3.8.0"
svgpathtools = "^1.6.1"
svgpath2mpl = "^1.0.0"
mysql-connector-python = "^8.1.0"
sqlalchemy = "^2.0.23"
cloud-sql-python-connector = "^1.4.2"
fastapi = "^0.104.1"
pymysql = "^1.1.0"
gunicorn = "^21.2.0"
uvicorn = "^0.23.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.292"
black = "^23.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
